<resources>
    <string name="welcome">Welcome to</string>
    <string name="app_name">Dice Roller For All</string>

    <string name="d2Roller">Roll multiple D2s</string>
    <string name="d3Roller">Roll multiple D3s</string>
    <string name="d4Roller">Roll multiple D4s</string>
    <string name="d6Roller">Roll multiple D6s</string>
    <string name="d8Roller">Roll multiple D8s</string>
    <string name="d10Roller">Roll multiple D10s</string>
    <string name="d12Roller">Roll multiple D12s</string>
    <string name="d20Roller">Roll multiple D20s</string>
    <string name="d50Roller">Roll multiple D50s</string>
    <string name="d100Roller">Roll multiple D100s</string>
    <string name="percentileRoller">Roll multiple Percentiles</string>

    <string name="dnd5e">Dungeons and Dragons 5th Edition</string>
    <string name="pathF">Pathfinder</string>
    <string name="generalRoller">General Dice</string>
    <string name="multGeneralRoller">Multiple General Dice</string>

    <string name="d2">D2</string>
    <string name="d3">D3</string>
    <string name="d4">D4</string>
    <string name="d6">D6</string>
    <string name="d8">D8</string>
    <string name="d10">D10</string>
    <string name="d12">D12</string>
    <string name="d20">D20</string>
    <string name="d50">D50</string>
    <string name="d100">D100</string>
    <string name="percentile">Percentile</string>
    <string name="advd20">D20 with Advantage</string>
    <string name="davd20">D20 with Disadvantage</string>

    <string-array name="multipleDice">
        <item>Roll multiple D2s</item>
        <item>Roll multiple D3s</item>
        <item>Roll multiple D4s</item>
        <item>Roll multiple D6s</item>
        <item>Roll multiple D8s</item>
        <item>Roll multiple D10s</item>
        <item>Roll multiple D12s</item>
        <item>Roll multiple D20s</item>
        <item>Roll multiple D50s</item>
        <item>Roll multiple D100s</item>
        <item>Roll multiple Percentile Die</item>
    </string-array>
    <string-array name="amountToRoll">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>Custom</item>
    </string-array>

</resources>