<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#616161"
    tools:context=".MainMenuActivity">

    <Button
        android:id="@+id/btnPathFinder"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="2dp"
        android:background="#D3D3D3"
        android:text="@string/pathF"
        app:backgroundTint="@color/design_default_color_error"
        app:layout_constraintBottom_toTopOf="@+id/btnGeneralRoll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnDND5"
        app:layout_constraintTop_toBottomOf="@+id/btnDND5"
        tools:text="@string/pathF" />

    <Button
        android:id="@+id/btnDND5"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:background="#D3D3D3"
        android:text="@string/dnd5e"
        app:backgroundTint="@color/design_default_color_error"
        app:layout_constraintBottom_toTopOf="@+id/btnPathFinder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.77"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@string/dnd5e" />

    <Button
        android:id="@+id/btnGeneralRoll"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="2dp"
        android:background="#D3D3D3"
        android:text="@string/generalRoller"
        app:backgroundTint="@color/design_default_color_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnPathFinder"
        app:layout_constraintTop_toBottomOf="@+id/btnPathFinder"
        tools:text="@string/generalRoller" />

    <TextView
        android:id="@+id/txtMainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="139dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/app_name" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="331dp"
        android:layout_marginRight="331dp"
        android:text="@string/welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnMultipleGeneralRoll"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="114dp"
        android:layout_marginLeft="114dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:background="#D3D3D3"
        android:text="General Multiples of Dice"
        app:backgroundTint="@color/design_default_color_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGeneralRoll" />

</androidx.constraintlayout.widget.ConstraintLayout>